<com.rey.material.widget.LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <com.rey.material.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_prev"
            android:id="@+id/prevText"
            android:layout_gravity="left|center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="40dp"
            />
        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:max="100"
            android:progress="0"
            android:minHeight="20dp"
            android:id="@+id/seebar"
            android:layout_gravity="center_vertical|center"

            />
        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_next"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="40dp"
            android:id="@+id/nextText"
            android:textSize="16sp"
            />
    </com.rey.material.widget.LinearLayout>

       <com.rey.material.widget.LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
         >
            <com.rey.material.widget.LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:id="@+id/book_ll_catalog"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_book_catalog"

                    />
                  <com.rey.material.widget.TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/book_catalog"
                      android:gravity="center_horizontal"
                      />
            </com.rey.material.widget.LinearLayout>
           <com.rey.material.widget.LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:id="@+id/book_ll_day"
               >
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_setting_day"
                   android:id="@+id/dayOrnight"
                   />
               <com.rey.material.widget.TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/book_setting_day"
                   android:id="@+id/dayOrnightText"
                   android:gravity="center_horizontal"
                   />
           </com.rey.material.widget.LinearLayout>
           <com.rey.material.widget.LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:id="@+id/book_ll_theme"
               >
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_font_size"
                   />
               <com.rey.material.widget.TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/book_theme_setting"
                   android:gravity="center_horizontal"

                   />
           </com.rey.material.widget.LinearLayout>
       </com.rey.material.widget.LinearLayout>

</com.rey.material.widget.LinearLayout>
